--- a/catalogue/Manifest.yaml
+++ b/catalogue/Manifest.yaml
@@ -1,3 +1,11 @@
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+   name: catalogue-config
+data:
+  MONGO_URL: "mongodb://mongodb:80/catalogue"
+---
 apiVersion: v1
 kind: Pod
 metadata:
@@ -10,6 +18,9 @@ spec:
     - name: catalogue
       imagePullPolicy: Always
       image: araguntajyothi/catalogue:k8
+      envFrom:
+        - configMapRef:
+            name: catalogue-config
       resources:
         requests:
           cpu: "100m"
@@ -22,7 +33,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: catalogue-service
+  name: catalogue
 spec:
   selector:
     name: catalogue
