--- a/mysql/Manifest.yaml
+++ b/mysql/Manifest.yaml
@@ -1,5 +1,22 @@
 ---
 apiVersion: v1
+kind: Secret
+metadata:
+  name: mysql-secret
+type: Opaque
+data:
+  MYSQL_USER: "c2hpcHBpbmc="  #echo -n shipping | base64
+  MYSQL_PASSWORD: "c2VjcmV0"  # echo -n secret | base64
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+   name: mysql-config
+data:
+  MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+  MYSQL_DATABASE: "cities"
+---
+apiVersion: v1
 kind: Pod
 metadata:
   name: mysql
@@ -10,9 +27,14 @@ spec:
   containers:
     - name: mysql
       imagePullPolicy: Always
-      image: araguntajyothi/mysql:v1
+      image: araguntajyothi/mysql:k8
       ports:
         - containerPort: 3306
+      envFrom:
+        - configMapRef:
+            name: mysql-config
+        - secretRef:
+            name: mysql-secret
       resources:
         requests:
           cpu: "100m"
