--- a/web/default.conf
+++ b/web/default.conf
@@ -83,7 +83,11 @@ http {
 
     location /api/user/ {
             proxy_pass http://user/;
-        }  
+        }
+
+     location /api/cart/ {
+            proxy_pass http://cart/;
+        }
 
     location /nginx_status {
         stub_status on;
