--- a/mysql/Manifest.yaml
+++ b/mysql/Manifest.yaml
@@ -5,9 +5,9 @@ metadata:
   name: mysql-secret
 type: Opaque
 data:
-  MYSQL_USER: c2hpcHBpbmc=  #echo -n shipping | base64
-  MYSQL_PASSWORD: c2VjcmV0  # echo -n secret | base64
-  MYSQL_ROOT_PASSWORD: cm9vdDEyMwo=  # echo  root123 | base64
+  MYSQL_USER: c2hpcHBpbmc=
+  MYSQL_PASSWORD: c2VjcmV0
+  MYSQL_ROOT_PASSWORD: cm9vdDEyMwo=
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -28,6 +28,7 @@ spec:
     - name: mysql
       imagePullPolicy: Always
       image: araguntajyothi/mysql:k8
+      args: ["--secure-auth"]
       ports:
         - containerPort: 3306
       envFrom:
