--- a/mysql/Manifest.yaml
+++ b/mysql/Manifest.yaml
@@ -7,7 +7,7 @@ type: Opaque
 data:
   MYSQL_USER: c2hpcHBpbmc=
   MYSQL_PASSWORD: c2VjcmV0
-  MYSQL_ROOT_PASSWORD: cm9vdDEyMwo=
+  MYSQL_ROOT_PASSWORD: cm9vdDEyMw==
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -29,6 +29,12 @@ spec:
       imagePullPolicy: Always
       image: araguntajyothi/mysql:k8
       args: ["--secure-auth"]
+      env:
+       - name: MYSQL_ROOT_PASSWORD
+         valueFrom:
+           secretKeyRef:
+             name: mysql-secret
+             key: MYSQL_ROOT_PASSWORD
       ports:
         - containerPort: 3306
       envFrom:
