--- a/cart/Manifest.yaml
+++ b/cart/Manifest.yaml
@@ -18,7 +18,7 @@ spec:
   containers:
     - name: cart
       imagePullPolicy: Always
-      image: araguntajyothi/cart:v1
+      image: araguntajyothi/cart:k8
       envFrom:
         - configMapRef:
             name: cart-config
