--- a/mysql/Manifest.yaml
+++ b/mysql/Manifest.yaml
@@ -7,7 +7,6 @@ type: Opaque
 data:
   MYSQL_USER: c2hpcHBpbmc=
   MYSQL_PASSWORD: c2VjcmV0
-  MYSQL_ROOT_PASSWORD: cm9vdDEyMw==
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -15,6 +14,7 @@ metadata:
    name: mysql-config
 data:
   MYSQL_DATABASE: cities
+  MYSQL_ALLOW_EMPTY_PASSWORD: yes
 ---
 apiVersion: v1
 kind: Pod
@@ -29,12 +29,6 @@ spec:
       imagePullPolicy: Always
       image: araguntajyothi/mysql:k8
       args: ["--secure-auth"]
-      env:
-       - name: MYSQL_ROOT_PASSWORD
-         valueFrom:
-           secretKeyRef:
-             name: mysql-secret
-             key: MYSQL_ROOT_PASSWORD
       ports:
         - containerPort: 3306
       envFrom:
@@ -42,13 +36,6 @@ spec:
             name: mysql-config
         - secretRef:
             name: mysql-secret
-      resources:
-        requests:
-          cpu: "100m"
-          memory: "128Mi"
-        limits:
-          cpu: "100m"
-          memory: "128Mi"
 
 ---
 apiVersion: v1
@@ -61,5 +48,5 @@ spec:
     tier: db
   ports:
     - protocol: TCP
-      port: 80
+      port: 3306
       targetPort: 3306
