--- a/mysql/Manifest.yaml
+++ b/mysql/Manifest.yaml
@@ -13,8 +13,8 @@ kind: ConfigMap
 metadata:
    name: mysql-config
 data:
-  MYSQL_DATABASE: cities
-  MYSQL_ALLOW_EMPTY_PASSWORD: yes
+  MYSQL_DATABASE: "cities"
+  MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
 ---
 apiVersion: v1
 kind: Pod
