--- a/web/default.conf
+++ b/web/default.conf
@@ -89,6 +89,18 @@ http {
             proxy_pass http://cart/;
         }
 
+       location /api/shipping/ {
+            proxy_pass http://shipping/;
+        }
+
+        # location /api/payment/ {
+        #     proxy_pass http://payment/;
+        # }
+    
+        # location /api/ratings/ {
+        #     proxy_pass http://ratings:80/;
+        # }
+
     location /nginx_status {
         stub_status on;
         access_log off;
